Fix text wrap for long words

--- a/sass/blog.sass
+++ b/sass/blog.sass
@@ -3,6 +3,7 @@
 	max-width: 800px
 	margin: 0 auto
 	padding: 0px 20px
+	overflow-wrap: break-word
 
 h1
 	font-size: 48px
